2009-01-14  Gabor Csardi  <csardi@szaffi>

	* src/arpack.c (igraph_arpack_eigen_graph) : added

2009-01-04  Gabor Csardi  <csardi@szaffi>

	* src/scg.c (igraph_scg_semi_projectors) : bugs corrected for 
	the non-symmetric case

	* src/scg.c (igraph_scg_matrix) : support non-symmetric matrices

	* src/arpack.c (igrpah_arpack_eigen) : end of the spectrum is
	finally implemented

	* src/arpack.c (igraph_arpack_eigen) : calculate more eigenvectors
	than needed, to be on the safe side

	* src/arpack.c (igraph_arpack_rnsolve) : make 'v' bigger, why 
	is this needed?

	* src/arpack.c (igraph_arpack_rnsolve) : return 'nconv' eigenvalues 
	and orignev+1 columns for eigenvectors
	(igraph_arpack_unpack_complex) : update accordingly

	* src/arpack.c (igraph_arpack_unpack_complex) : 'reverse' argument
	added

	* src/arpack.c (igraph_arpack_unpack_complex) : rewritten to 
	sort according to modulus of eigenvalues

	* src/arpack.c (igraph_arpack_rnsolve) : return orignev+1 
	columns in the eigenvector matrix	

2008-11-14  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_is_bipartite) : added

2008-11-10  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_path_johnson) : 
	added support for 'to' argument

	* src/heap.c (igraph_2wheap_deactivate_max) : bug corrected

2008-11-07  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c 
	(igraph_shortest_paths_bellman_ford) : implement 'to' argument

2008-11-05  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : 
	added support for 'to' argument

	* src/heap.c (igraph_2wheap_deactivate_max) 
	(igraph_2wheap_has_active) : added, elements can
	be inactive now

2008-11-04  Gabor Csardi  <csardi@szaffi>

	* src/centrality.c (igraph_closeness_estimate_weighted) : 
	use the two-way heap

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	use the two-way heap

	* src/structural_properties.c (igraph_get_shortest_paths_dijkstra) :