@@ -605,6 +605,11 @@ igraph_laplacian:
                 EDGEWEIGHTS weights=NULL
         DEPS: weights ON graph
 
+igraph_laplacian_graph:
+        PARAMS: GRAPH graph, OUT GRAPH res, BOOLEAN normalized=False, \
+                EDGEWEIGHTS weights=NULL, OUT EDGEWEIGHTS out_weights
+        DEPS: weights ON graph, out_weights ON res
+
 #######################################
 # Components
 #######################################
